--- a/customer/templates/addyardproduct.html
+++ b/customer/templates/addyardproduct.html
@@ -7,7 +7,7 @@
 </head>
 <body>
  {% block content %}
- <h2 class="mb-4">Free Consultation</h2>
+ <h2 class="mb-4">Add Yard Product</h2>
 	<form  class="appointment" method="post">
 	{% csrf_token %}
 		<div class="row justify-content-center">
