--- a/customer/templates/findcustomer.html
+++ b/customer/templates/findcustomer.html
@@ -7,6 +7,24 @@
 </head>
 <body>
  {% block content %}
+<form class="appointment">
+
+<h2>Search Customer</h2>
+<div class="row justify-content-center">
+	<div class="col-md-6">
+		<div class="form-group">
+			 <input type="text" class="form-control" placeholder="Find Customer..." name="name">
+		</div>
+	</div>
+	
+	
+	<div class="col-md-6">
+		<div class="form-group">
+		<input type="submit" value="Search Customer" class="btn btn-secondary py-3 px-4">
+		</div>
+	</div>
+</div>
+</form>
 <form method="post">
 {% csrf_token %}
 
@@ -17,7 +35,7 @@
 <div class="icon"><span class="fa fa-chevron-down"></span></div>
 <select name="field" id="" class="form-control">
 {% for element in form %}
-<option value="{{ element.id }}">{{ element.name }}</option>
+<option value="{{ element.id }}">{{ element.name }}-{{ element.phone }}</option>
 {% endfor %}
 </select>
 </div>
